<resources>
    <string name="app_name">Patient Managament System</string>
    <string name="enter_name">Enter Name</string>
    <string name="registration">REGISTRATION</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">register</string>
    <string name="already_signed_up_login">Already Signed up? Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="this_is_second_activity">This is second activity</string>
    <string name="logout">Logout</string>
    <string name="display_patient_record">Display Patient Record</string>
    <string name="create_new_record">Create new Record</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="age">Age:</string>
    <string name="name">Name</string>
    <string name="gender">Gender:</string>
    <string name="marital_status">Marital Status:</string>
    <string name="occupation">Occupation</string>
    <string name="health_problem">Health Problem</string>
    <string name="blood_group">Blood Group:</string>
    <string name="save">Save</string>
    <string name="create_new_recordtv">CREATE NEW RECORD</string>
    <string name="disp_first_name">First Name</string>
    <string name="disp_last_name">Last Name</string>
    <string name="go_back">Go Back</string>
    <string name="patient_information">PATIENT INFORMATION</string>


</resources>
