<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthActivity">

    <TextView
        android:id="@+id/tvProfileFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_first_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/tvProfileLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_last_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileFirstName"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tvProfileAge"
        android:layout_width="66dp"
        android:layout_height="19dp"
        android:text="@string/age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileLastName"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/tvProfileGender"
        android:layout_width="66dp"
        android:layout_height="20dp"
        android:text="@string/gender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileAge"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/tvProfileMaritalStatus"
        android:layout_width="91dp"
        android:layout_height="22dp"
        android:text="@string/marital_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileGender"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/tvProfileOccupation"
        android:layout_width="78dp"
        android:layout_height="33dp"
        android:text="@string/occupation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileMaritalStatus"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/tvProfileHealthProblem"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:text="@string/health_problem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileOccupation"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/tvProfileBloodGrouo"
        android:layout_width="92dp"
        android:layout_height="21dp"
        android:text="@string/blood_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileHealthProblem"
        app:layout_constraintVertical_bias="0.343" />

    <Button
        android:id="@+id/btngoback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="284dp"
        android:layout_height="37dp"
        android:text="@string/patient_information"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btngoback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />
</androidx.constraintlayout.widget.ConstraintLayout>